# fw-general-purpose-controller

./: .gitignore  .project  CMakeLists.txt  CMakePresets.json  build_all.sh  versions.hpp
application/ApplicationMain/: application_main.cpp
application/BluewhiteCanComm/: bluewhite_can_comm.cpp  bluewhite_can_comm.hpp
application/BluewhiteMessageHandler/: bluewhite_message_handler.cpp  bluewhite_message_handler.hpp
application/BluewhiteUsbComm/: bluewhite_usb_comm.cpp
application/GpcController/: gpc_controller.cpp  gpc_controller.hpp
application/GpcTelemetrySender/: gpc_telemetry_sender.cpp  gpc_telemetry_sender.hpp
application/MicroSequenceExecutor/: micro_sequence_executor.cpp  micro_sequence_executor.hpp
application/MicroVarStore/: micro_var_store.cpp  micro_var_store.hpp
application/RawCanInterface/: raw_can_interface.cpp  raw_can_interface.hpp
application/SafetyFeatures/: safety_features.cpp  safety_features.hpp
application/UsbComm/: usb_comm.cpp
application_projects/application_g474/: .cproject  .mxproject  .project  G474.ioc  STM32G474CETX_FLASH.ld  application_g474 Debug.launch  application_g474.ioc
application_projects/application_g474/Core/Inc/: application_main.h  application_main.hpp  bluewhite_can_comm.hpp  bluewhite_message_handler.hpp  bluewhite_usb_comm.hpp  gpc_controller.hpp  gpc_telemetry_sender.hpp  main.h  micro_sequence_executor.hpp  micro_var_store.hpp  raw_can_interface.hpp  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usb_comm.hpp
application_projects/application_g474/Core/Src/: ConfigStructs  application  application_main.cpp  bluelink_messages_include  interfaces_g474  (+16 more)
bootloader_projects/bootloader_g474/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32F072C8TX_FLASH.ld  STM32G474CETX_FLASH.ld  bootloader_g474.ioc  fw-bootloader-g4 Debug.launch  fw-bootloader-g4.ioc
bootloader_projects/bootloader_g474/Core/Inc/: bootloader_defines.hpp  bootloader_main.hpp  bootloader_usb_comm.hpp  led_status_handler.hpp  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  usb_comm.hpp
bootloader_projects/bootloader_g474/Core/Src/: bootloader_main.cpp  bootloader_usb_comm.cpp  led_status_handler.cpp  main.cpp  stm32f0xx_hal_msp.c  stm32f0xx_it.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  usb_comm.cpp
bootloader_projects/bootloader_g474/Debug/: fw-bootloader.map  makefile  objects.list  sources.mk
bootloader_projects/bootloader_g474/USB_Device/App/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_desc.c
bootloader_projects/bootloader_project/: .project  CMakeLists.txt  fw-bootloader.ioc
bootloader_projects/bootloader_project/Core/Src/: bootloader_main.cpp  main.cpp
bootloader_projects/bootloader_project/Debug/: fw-bootloader.elf  fw-bootloader.list  makefile  objects.list
cmake/: stm32-toolchain.cmake  toolchain-paths.cmake.in
config_projects/config_g474/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F072C8TX_FLASH.ld  STM32G474CETX_FLASH.ld  STM32G474CETX_FLASH_ideOriginal.ld  config_g474 Debug.launch  config_g474.ioc  fw-config-g4.ioc
config_projects/config_g474/Core/Inc/: config_type.h
config_projects/config_g474/Core/Src/: main.cpp
config_projects/config_project/: STM32F072C8TX_FLASH_ideOriginal.ld  fw-config.ioc
configs/ConfigStructs/: config_defines.hpp  config_memory.hpp  hardware_configs.hpp
configs/ConfigStructs/SequencesConfigs/: micro_op_builder.hpp  sequences_configs.hpp
configs/ConfigsTypes/: g474_gpc_config_memory.hpp
configs/ConfigsTypes/f072-Configs/: f072_gpio_pins.hpp
configs/ConfigsTypes/g474-Configs/: g474_gpio_pins.hpp
interfaces/interfaces_g474/AdcManager/: adc_manager.cpp  adc_manager.hpp
interfaces/interfaces_g474/CanMessenger/: can_messenger.cpp  can_messenger.hpp
interfaces/interfaces_g474/CommHandler/: comm_interrupts_handler.cpp  comm_interrupts_handler.hpp  gpc_bluelink_usb_callbacks.hpp
interfaces/interfaces_g474/CommInterface/: comm_interface.cpp  comm_interface.hpp
interfaces/interfaces_g474/GpioInterface/: gpio_interface.cpp  gpio_interface.hpp
interfaces/interfaces_g474/HardwareMap/: hardware_map.cpp  hardware_map.hpp
interfaces/interfaces_g474/InterfaceDefines/: adc_buffer_defines.hpp  comm_defines.hpp  gpio_defines.hpp  interface_status.hpp  meta_data.hpp  spi_comm_defines.hpp
interfaces/interfaces_g474/MemoryMap/: memory_map.hpp
interfaces/interfaces_g474/NonVolatileMemoryInterface/: non_volatile_memory_interface.cpp  non_volatile_memory_interface.hpp
interfaces/interfaces_g474/SchedulerInterface/: scheduler_interface.cpp  scheduler_interface.hpp
interfaces/interfaces_g474/SystemInterface/: system_interface.cpp  system_interface.hpp
mcu_projects/G474/: .mxproject  .project  STM32G474CETX_FLASH.ld  STM32G474CETX_RAM.ld
packaging/: build_deb.sh  build_windows.ps1  gpc-recorder.spec  win_entry.py  win_entry_repl.py
packaging/wrappers/: gpc-recorder  gpc-recorder-build-config  gpc-recorder-repl  seed-exports.sh
programmer/: .gitignore  CMakeLists.txt  README.md  can_setup.sh
programmer/g474/: bluelink_transport.hpp  can_transport.cpp  can_transport.hpp  concrete_bluelink_callbacks.cpp  concrete_bluelink_callbacks.hpp  makefile  programmer.cpp  usb_transport.cpp  usb_transport.hpp
tools/gpc_sequence_recorder/: README.md  requirements.txt  run.sh
tools/gpc_sequence_recorder/gpc_recorder/: __init__.py  __main__.py  graph_api.py  paths.py  programmer_flash.py  seed_exports.py  server.py  usb_bridge.py  validate.py
tools/gpc_sequence_recorder/tests/: test_bin.py  test_can_transmit.py  test_coerce.py  test_completion.py  test_config_loader.py  test_golden.py  test_graph_api.py  test_hex.py  test_if_condition.py  test_normalize.py  test_pack.py  test_powerup.py  test_repl.py  test_tick_dsl.py  test_usb_bridge.py
tools/gpc_sequence_recorder/web/: app.js  index.html  visual.html  visual.js
tools/gpc_usb_bluelink/: .gitignore  CMakeLists.txt  README.md  bluelink_packet_log.cpp  bluelink_packet_log.hpp  concrete_bluelink_callbacks.cpp  concrete_bluelink_callbacks.hpp  main.cpp  makefile  wire_packet.cpp  wire_packet.hpp
(+31 files in other folders)
